# switchenv

./: .gitignore  Cargo.toml  README.md
switch-env-cli/: Cargo.toml
switch-env-cli/src/: lib.rs  main.rs  template.hbs
switch-env-tauri/: Cargo.toml  tauri.conf.json
switch-env-tauri/src/: main.rs
switch-env-tauri/src/commands/: enmac.rs  mod.rs
switch-env-ui/: .taurignore  Cargo.toml  Trunk.toml  index.html
switch-env-ui/src/: app.rs  app.scss  main.rs
switch-env-ui/src/assets/global-styles/: font.scss  reset.scss  theme.scss
switch-env-ui/src/components/: mod.rs
switch-env-ui/src/components/input/: input.scss  mod.rs
switch-env-ui/src/components/logo/: logo.scss  mod.rs
switch-env-ui/src/components/setting/: mod.rs  setting.scss
switch-env-ui/src/components/tabgroup/: mod.rs  tabgroup.scss
