[package]
name = "switch-env-ui"
version = "0.0.1"
edition = "2021"

[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = "0.19"
stylist = { version = "0.10.1", features = ["yew"] }
gloo = "0.8.0"
serde_json = "1.0.85"
